--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="Jonas Ebert, Administration, IT, Politik, Bündnis 90/DIE GRÜNEN, Braunschweig">
 		<meta name="author" content="Jonas Ebert (xier/xies)">
 		<meta name="canonical" content="https://jonasebert.de">
-		<link rel="icon" href="%sveltekit.assets%/logo/logo_500x500.png" />
+		<link rel="icon" href="%sveltekit.assets%/logo/logo_500x500.webp" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
