Global: Added preload

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,11 @@
 		<meta name="canonical" content="https://jonasebert.de/about">
 		<link rel="icon" href="%sveltekit.assets%/logo/logo_500x500.webp">
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/logo/logo_500x500.webp">
+		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Regular.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-SemiBold.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Bold.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="%sveltekit.assets%/fonts/montserrat/Montserrat-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="%sveltekit.assets%/icons/arrow_up.svg" as="image" type="image/svg+xml" crossorigin="anonymous">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
