[Global] Updated to new Logo

--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="Klimaschutz, Nachhaltigkeit, Soziale Gerechtigkeit, Aktivismus, Systemadministration, Umweltbewusstsein, Grüne Technologien, Erneubare Energien">
 		<meta name="author" content="Jonas Ebert (xier/xies)">
 		<meta name="canonical" content="https://jonasebert.de/about">
-		<link rel="icon" href="%sveltekit.assets%/logo/logo_500x500.webp">
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/logo/logo_500x500.webp">
+		<link rel="icon" href="%sveltekit.assets%/logo/favicon_500x500.svg">
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/logo/logo_500x500.svg">
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Regular.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-SemiBold.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Bold.ttf" as="font" type="font/ttf" crossorigin>
