--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,23 @@
 		<meta name="keywords" content="Klimaschutz, Nachhaltigkeit, Soziale Gerechtigkeit, Aktivismus, Systemadministration, Umweltbewusstsein, Grüne Technologien, Erneubare Energien">
 		<meta name="author" content="Jonas Ebert (xier/xies)">
 		<meta name="canonical" content="https://jonasebert.de/about">
-		<link rel="icon" href="%sveltekit.assets%/logo/favicon_500x500.svg">
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/logo/logo_500x500.svg">
+		<link rel="apple-touch-icon" sizes="57x57" href="%sveltekit.assets%/logo/favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="%sveltekit.assets%/logo/favicon/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="%sveltekit.assets%/logo/favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="%sveltekit.assets%/logo/favicon/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="%sveltekit.assets%/logo/favicon/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="%sveltekit.assets%/logo/favicon/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="%sveltekit.assets%/logo/favicon/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="%sveltekit.assets%/logo/favicon/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/logo/favicon/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="%sveltekit.assets%/logo/favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/logo/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="%sveltekit.assets%/logo/favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/logo/favicon/favicon-16x16.png">
+		<link rel="manifest" href="%sveltekit.assets%/logo/favicon/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="%sveltekit.assets%/logo/favicon/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Regular.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-SemiBold.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="%sveltekit.assets%/fonts/poppins/Poppins-Bold.ttf" as="font" type="font/ttf" crossorigin>
