Update job title in meta description and store.js

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Jonas Ebert: Aktivist & Experte. Einsatz für Klimaschutz, nachhaltige Entwicklung und soziale Gerechtigkeit.">
+		<meta name="description" content="Jonas Ebert: Systemadministrator. Einsatz für Klimaschutz, nachhaltige Entwicklung und soziale Gerechtigkeit.">
 		<meta name="keywords" content="Klimaschutz, Nachhaltigkeit, Soziale Gerechtigkeit, Aktivismus, Systemadministration, Umweltbewusstsein, Grüne Technologien, Erneubare Energien">
 		<meta name="author" content="Jonas Ebert (xier/xies)">
 		<meta name="canonical" content="https://jonasebert.de/about">
